[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hardware-in-the-loop-skill"
version = "0.1.0"
description = "Agent skills validated against real-world physical hardware"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "hardware-in-the-loop",
    "robotics",
    "manufacturing",
    "computer-vision",
    "safety",
    "physical-validation",
    "servo",
    "camera",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/hardware-in-the-loop-skill"
Documentation = "https://github.com/avasis-ai/hardware-in-the-loop-skill#readme"
Repository = "https://github.com/avasis-ai/hardware-in-the-loop-skill.git"
Issues = "https://github.com/avasis-ai/hardware-in-the-loop-skill/issues"

[project.scripts]
hardware-loop = "hardware_in_the_loop_skill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hardware_in_the_loop_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
